--- a/pr5/z11.1.html
+++ b/pr5/z11.1.html
@@ -12,6 +12,10 @@ if (test == true)
 alert ("Верно");
 else 
 alert ("Неверно");
+if (test)
+alert ("Верно");
+else
+alert ("Неверно");
 </script>
 </body>
 </html>
