--- a/pr5/z1.2.html
+++ b/pr5/z1.2.html
@@ -13,10 +13,7 @@ x = a + b;
 y = a - b;
 z = a * b;
 t = a / b;
-alert ("a + b = " + x);
-alert ("a - b = " + y);
-alert ("a * b = " + z);
-alert ("a / b = " + t);
+alert ("a + b = " + x + "\na - b = " + y + "\na * b = " + z + "\na / b = " + t);
 </script>
 </body>
 </html>
