--- a/pr5/z14.3.html
+++ b/pr5/z14.3.html
@@ -9,12 +9,12 @@
 <script>
 var a = 2;
 while (a < 101){
-document.writeln(a + "<br>");
+document.writeln(a + " ");
 a+=2;
 }
 document.writeln("<br>" + "<hr>");
 for (var i = 2; i < 101; i+=2){
-document.writeln(i + "<br>");
+document.writeln(i + " ");
 }
 </script>
 </body>
