--- a/pr5/z14.1.html
+++ b/pr5/z14.1.html
@@ -9,12 +9,12 @@
 <script>
 var a = 1;
 while (a < 101){
-document.writeln(a + "<br>");
+document.writeln(a + " ");
 a++;
 }
 document.writeln("<br>" + "<hr>");
 for (var i = 1; i < 101; i++){
-document.writeln(i + "<br>");
+document.writeln(i + " ");
 }
 </script>
 </body>
